--- a/scss/pirateborg/_dialog.scss
+++ b/scss/pirateborg/_dialog.scss
@@ -137,6 +137,51 @@
   padding-top: 2px;
 }
 
+.character-generator-dialog {
+  .module-group {
+    margin-bottom: 1rem;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+
+    .module-header {
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
+      margin: 0 0 0.5rem 0;
+      padding: 0.5rem;
+      background-color: rgba(0, 0, 0, 0.1);
+      border-radius: 4px;
+      cursor: pointer;
+      user-select: none;
+      transition: background-color 0.2s;
+
+      &:hover {
+        background-color: rgba(0, 0, 0, 0.2);
+      }
+
+      i {
+        font-size: 0.8rem;
+        transition: transform 0.2s;
+      }
+
+      span {
+        font-size: 1.1rem;
+        font-weight: bold;
+      }
+    }
+
+    .module-classes {
+      padding-left: 1rem;
+
+      ul {
+        margin: 0;
+      }
+    }
+  }
+}
+
 .defense-dialog,
 .attack-dialog {
   .form-group {
