feat(effects): inital commit of expansion of efeect system

--- a/css/pirateborg.css
+++ b/css/pirateborg.css
@@ -1985,4 +1985,22 @@ button.dice-calculator--button {
   height: auto !important;
 }
 
+/* Combat Bonuses Styling */
+.pirateborg.sheet .window-content .combat-bonuses .stats-block .small-input {
+  width: 50px;
+  font-size: 16px;
+  height: 20px;
+  line-height: 20px;
+}
+
+.pirateborg.sheet .window-content .combat-bonuses .item.flexrow {
+  justify-content: space-around;
+  gap: 15px;
+  padding: 8px 0;
+}
+
+.pirateborg.sheet .window-content .combat-bonuses .stats-block {
+  min-width: 120px;
+}
+
 /*# sourceMappingURL=pirateborg.css.map */
