--- a/templates/actor/common/effects.html
+++ b/templates/actor/common/effects.html
@@ -26,7 +26,7 @@
     {{#each effects.temporary as |effect|}}
     <li class="item flexrow item-content" data-effect-id="{{effect.id}}">
       <img class="item-property item-image" src="{{effect.img}}"></img>
-      <div class="item-property item-name effect-edit">{{effect.name}}</div>
+      <div class="item-property item-name effect-edit">{{effect.name}}{{#if effect.modifierDisplay}} <span class="effect-modifier">({{effect.modifierDisplay}})</span>{{/if}}</div>
 
       <div class="item-property">{{effect.sourceName}}</div>
       <div class="item-controls">
@@ -52,7 +52,7 @@
     {{#each effects.passive as |effect|}}
     <li class="item flexrow item-content" data-effect-id="{{effect.id}}">
       <img class="item-property item-image" src="{{effect.img}}"></img>
-      <div class="item-property item-name effect-edit">{{effect.name}}</div>
+      <div class="item-property item-name effect-edit">{{effect.name}}{{#if effect.modifierDisplay}} <span class="effect-modifier">({{effect.modifierDisplay}})</span>{{/if}}</div>
 
       <div class="item-property">{{effect.sourceName}}</div>
       <div class="item-controls">
@@ -77,7 +77,7 @@
     {{#each effects.disabled as |effect|}}
     <li class="item flexrow item-content" data-effect-id="{{effect.id}}" style="opacity : 0.5">
       <img class="item-property item-image" src="{{effect.img}}"></img>
-      <div class="item-property item-name effect-edit">{{effect.name}}</div>
+      <div class="item-property item-name effect-edit">{{effect.name}}{{#if effect.modifierDisplay}} <span class="effect-modifier">({{effect.modifierDisplay}})</span>{{/if}}</div>
 
       <div class="item-property">{{effect.sourceName}}</div>
       <div class="item-controls">
