--- a/templates/dialog/quick-effect.html
+++ b/templates/dialog/quick-effect.html
@@ -19,6 +19,42 @@
           <option value="system.abilities.spirit.value">{{localize "PB.AbilitySpirit"}}</option>
           <option value="system.abilities.skill.value">{{localize "PB.AbilitySkill"}}</option>
         </optgroup>
+        <optgroup label="{{ localize 'PB.Combat' }}">
+          <option value="system.attributes.combat.attackModifier">Attack Modifier</option>
+          <option value="system.attributes.combat.defenseModifier">Defense Modifier</option>
+          <option value="system.attributes.combat.initiativeModifier">Initiative Modifier</option>
+          <option value="system.attributes.combat.damageModifier">Damage Modifier</option>
+          <option value="system.attributes.combat.armorTierModifier">Armor Tier Modifier</option>
+          <option value="system.attributes.combat.speedModifier">Speed Modifier</option>
+          <option value="system.attributes.combat.luckDieModifier">Luck Die Modifier</option>
+        </optgroup>
+        <optgroup label="{{ localize 'PB.Attributes' }}">
+          <option value="system.attributes.hp.max">{{localize "PB.HitPointsMax"}}</option>
+          <option value="system.attributes.hp.value">{{localize "PB.HitPointsCurrent"}}</option>
+          <option value="system.attributes.luck.value">{{localize "PB.LuckCurrent"}}</option>
+          <option value="system.attributes.luck.modifier">Luck Modifier</option>
+          <option value="system.attributes.rituals.max">{{localize "PB.RitualsMax"}}</option>
+          <option value="system.attributes.rituals.value">{{localize "PB.RitualsCurrent"}}</option>
+          <option value="system.attributes.extraResource.max">{{localize "PB.ExtraResourceMax"}}</option>
+          <option value="system.attributes.extraResource.value">{{localize "PB.ExtraResourceCurrent"}}</option>
+          <option value="system.attributes.carryingModifier.value">{{localize "PB.CarryingModifier"}}</option>
+          <option value="system.silver">{{localize "PB.Silver"}}</option>
+        </optgroup>
+        <optgroup label="{{ localize 'PB.CreatureAttributes' }}">
+          <option value="system.attributes.speed.max">{{localize "PB.SpeedMax"}}</option>
+          <option value="system.attributes.speed.value">{{localize "PB.SpeedCurrent"}}</option>
+          <option value="system.attributes.morale">{{localize "PB.Morale"}}</option>
+        </optgroup>
+        <optgroup label="{{ localize 'PB.VehicleAttributes' }}">
+          <option value="system.attributes.cargo.max">{{localize "PB.CargoMax"}}</option>
+          <option value="system.attributes.cargo.value">{{localize "PB.CargoCurrent"}}</option>
+          <option value="system.attributes.crew.max">{{localize "PB.CrewMax"}}</option>
+          <option value="system.attributes.crew.value">{{localize "PB.CrewCurrent"}}</option>
+          <option value="system.attributes.hull.max">{{localize "PB.HullMax"}}</option>
+          <option value="system.attributes.hull.value">{{localize "PB.HullCurrent"}}</option>
+          <option value="system.attributes.shanties.max">{{localize "PB.ShantiesMax"}}</option>
+          <option value="system.attributes.shanties.value">{{localize "PB.ShantiesCurrent"}}</option>
+        </optgroup>
       </select>
     </div>
 
