--- a/scss/pirateborg/_root.scss
+++ b/scss/pirateborg/_root.scss
@@ -12,7 +12,7 @@
 
   --warning-color: var(--highlight-background-color);
 
-  --window-background: url(/systems/pirateborg/ui/parchment-2.jpg) repeat;
+  --window-background: url(../ui/parchment-2.jpg) repeat;
   --window-header-color: #ffffff;
   --window-header-background-color: #000000;
 
