--- a/scss/pirateborg/_foundry-overrides.scss
+++ b/scss/pirateborg/_foundry-overrides.scss
@@ -1,5 +1,5 @@
 body {
-  background: url(/systems/pirateborg/ui/background.jpg);
+  background: url(../ui/background.jpg);
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -875,7 +875,7 @@ h3 {
 }
 
 .sheet.journal-entry .journal-entry-content {
-  background: url(/systems/pirateborg/ui/parchment-2.jpg);
+  background: url(../ui/parchment-2.jpg);
 }
 
 #playlists .playlist.flexrow .sound-control {
