--- a/scss/pirateborg/_sheet.scss
+++ b/scss/pirateborg/_sheet.scss
@@ -51,6 +51,7 @@
               font-size: 32px;
               border: none;
               height: 40px;
+              line-height: 40px;
             }
           }
 
