fix(i18n): Address PR #64 review feedback - localization improvements
- Localize Combat modifier options in quick-effect.html
- Localize modifier display names in actor-sheet.js addModifierDisplay()
- Localize error messages in actor-sheet.js effect handlers
- Localize modifier strings in attack/defend/initiative outcome files
- Localize 'modifier' text in character-sheet.html
- Add missing localization keys to en.json (ArmorTier, Defense, DRBonus,
  EffectsNotFound, LuckDie, LuckModifier, Speed)
- Include effect ID in 'Unknown' fallback for debugging
- Fix prettier formatting

--- a/templates/actor/character-sheet.html
+++ b/templates/actor/character-sheet.html
@@ -34,7 +34,7 @@
           <input class="stat-input" name="system.attributes.luck.value" type="number" value="{{data.system.attributes.luck.value}}" data-dtype="Number" />
           <span class="stat-rule luck-rule rollable">({{data.system.dynamic.luckDie}} {{ localize "PB.PerRest"}})</span>
           {{#if data.system.attributes.luck.modifier}}
-            <span class="luck-modifier">{{#if (gt data.system.attributes.luck.modifier 0)}}+{{/if}}{{data.system.attributes.luck.modifier}} modifier</span>
+            <span class="luck-modifier">{{#if (gt data.system.attributes.luck.modifier 0)}}+{{/if}}{{data.system.attributes.luck.modifier}} {{localize "PB.Modifier"}}</span>
           {{/if}}
         </div>        
       </div>
