--- a/templates/dialog/quick-effect.html
+++ b/templates/dialog/quick-effect.html
@@ -20,20 +20,20 @@
           <option value="system.abilities.skill.value">{{localize "PB.AbilitySkill"}}</option>
         </optgroup>
         <optgroup label="{{ localize 'PB.Combat' }}">
-          <option value="system.attributes.combat.attackModifier">Attack Modifier</option>
-          <option value="system.attributes.combat.defenseModifier">Defense Modifier</option>
-          <option value="system.attributes.combat.initiativeModifier">Initiative Modifier</option>
-          <option value="system.attributes.combat.damageModifier">Damage Modifier</option>
-          <option value="system.attributes.combat.armorTierModifier">Armor Tier Modifier</option>
-          <option value="system.attributes.combat.speedModifier">Speed Modifier</option>
-          <option value="system.attributes.combat.luckDieModifier">Luck Die Modifier</option>
-          <option value="system.attributes.combat.drModifier">DR Modifier</option>
+          <option value="system.attributes.combat.attackModifier">{{localize "PB.AttackBonus"}}</option>
+          <option value="system.attributes.combat.defenseModifier">{{localize "PB.DefenseBonus"}}</option>
+          <option value="system.attributes.combat.initiativeModifier">{{localize "PB.InitiativeBonus"}}</option>
+          <option value="system.attributes.combat.damageModifier">{{localize "PB.DamageBonus"}}</option>
+          <option value="system.attributes.combat.armorTierModifier">{{localize "PB.ArmorTierBonus"}}</option>
+          <option value="system.attributes.combat.speedModifier">{{localize "PB.SpeedBonus"}}</option>
+          <option value="system.attributes.combat.luckDieModifier">{{localize "PB.LuckDieBonus"}}</option>
+          <option value="system.attributes.combat.drModifier">{{localize "PB.DRBonus"}}</option>
         </optgroup>
         <optgroup label="{{ localize 'PB.Attributes' }}">
           <option value="system.attributes.hp.max">{{localize "PB.HitPointsMax"}}</option>
           <option value="system.attributes.hp.value">{{localize "PB.HitPointsCurrent"}}</option>
           <option value="system.attributes.luck.value">{{localize "PB.LuckCurrent"}}</option>
-          <option value="system.attributes.luck.modifier">Luck Modifier</option>
+          <option value="system.attributes.luck.modifier">{{localize "PB.LuckModifier"}}</option>
           <option value="system.attributes.rituals.max">{{localize "PB.RitualsMax"}}</option>
           <option value="system.attributes.rituals.value">{{localize "PB.RitualsCurrent"}}</option>
           <option value="system.attributes.extraResource.max">{{localize "PB.ExtraResourceMax"}}</option>
