fix: localise titles in more places

--- a/templates/actor/common/actor-equipment-list.html
+++ b/templates/actor/common/actor-equipment-list.html
@@ -50,7 +50,7 @@
           </a>
         {{/if}} 
       {{/ifNe}}
-      <a class="item-control item-delete" title="Delete Item"> 
+      <a class="item-control item-delete" title="{{localize 'PB.ItemDelete'}}">
         <i class="fas fa-trash"></i>
       </a>
     </div>
