--- a/templates/actor/character-sheet.html
+++ b/templates/actor/character-sheet.html
@@ -197,7 +197,7 @@
                 title="{{ifPrintElse item.system.equipped (localize 'PB.ItemEquipped') (localize 'PB.ItemUnequipped')}}"
                 ><i class="fas fa-fist-raised"></i
               ></a>
-              <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+              <a class="item-control item-delete" title="{{localize 'PB.ItemDelete'}}"><i class="fas fa-trash"></i></a>
             </div>
           </li>
           {{/each}} {{#unless data.system.dynamic.equippedWeapons.length}}
@@ -257,7 +257,7 @@
                 title="{{ifPrintElse data.system.dynamic.equippedArmor.system.equipped (localize 'PB.ItemEquipped') (localize 'PB.ItemUnequipped')}}"
                 ><i class="fas fa-fist-raised"></i
               ></a>
-              <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+              <a class="item-control item-delete" title="{{localize 'PB.ItemDelete'}}"><i class="fas fa-trash"></i></a>
             </div>
           </li>
           {{/if}} 
@@ -274,7 +274,7 @@
                 title="{{ifPrintElse data.system.dynamic.equippedHat.system.equipped (localize 'PB.ItemEquipped') (localize 'PB.ItemUnequipped')}}"
                 ><i class="fas fa-fist-raised"></i
               ></a>
-              <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+              <a class="item-control item-delete" title="{{localize 'PB.ItemDelete'}}"><i class="fas fa-trash"></i></a>
             </div>
           </li>
           {{/if}} 
@@ -320,7 +320,7 @@
               <h4 class="item-name item-edit rollable">{{item.name}} {{#ifGt item.system.quantity 1}} ({{item.system.quantity}}) {{/ifGt}}</h4>
               <div class="item-buttons">{{> "systems/pirateborg/templates/actor/common/actor-item-button.html" item=item}}</div>
               <div class="item-controls">
-                <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+                <a class="item-control item-delete" title="{{localize 'PB.ItemDelete'}}"><i class="fas fa-trash"></i></a>
               </div>
             </li>
             {{/each}}
@@ -368,7 +368,7 @@
             <h4 class="item-name item-edit rollable">{{item.name}}</h4>
             <div class="item-buttons">{{> "systems/pirateborg/templates/actor/common/actor-item-button.html" item=item}}</div>
             <div class="item-controls">
-              <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+              <a class="item-control item-delete" title="{{localize 'PB.ItemDelete'}}"><i class="fas fa-trash"></i></a>
             </div>
           </li>
           {{/each}}
