--- a/templates/actor/vehicle-sheet.html
+++ b/templates/actor/vehicle-sheet.html
@@ -114,7 +114,7 @@
 
           <div class="item-buttons">
             {{#if has-pc-action}}
-              <button type="button" class="item-button rollable action-pc-action" data-action="{{class}}" title="PC Action">
+              <button type="button" class="item-button rollable action-pc-action" data-action="{{class}}">
                 {{#if (eq ../data.type "vehicle_npc")}}
                   {{localize "PB.ShipNPCAction"}}
                 {{else}}
@@ -123,7 +123,7 @@
               </button>
             {{/if}}
             {{#if has-crew-action}}
-              <button type="button" class="item-button rollable action-crew-action" data-action="{{class}}" title="Crew Action">
+              <button type="button" class="item-button rollable action-crew-action" data-action="{{class}}">
                 {{localize "PB.ShipCrewAction"}}
               </button>
             {{/if}}
